# flip-fluid-parallel

./: .gitignore  CMakeLists.txt  README.md  default.nix  plot.py
src/: AABB.hpp  CMakeLists.txt  circle.hpp  fluid.cpp  fluid.hpp  free_list.hpp  geometry_func.cpp  geometry_func.hpp  main.cpp  math.hpp  particle.cpp  particle.hpp  time.hpp
src/cuda/: fluid.cpp  particle.cpp  particle.cu  particle.hpp  vec2.hpp
src/openmp/: fluid.cpp  particle.cpp  particle.hpp  vec2.hpp
src/sequential/: fluid.cpp  fluid.hpp  particle.cpp  particle.hpp
